--- a/src/components/RoadAnimation/RoadAdnimation.css
+++ b/src/components/RoadAnimation/RoadAdnimation.css
@@ -1,21 +1,378 @@
 .road {
-	position: absolute;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 90vw;
-	transform-style: preserve-3d;
-	transform: rotate(-15deg);
+	display: none;
 }
-.road::before {
-	content: '';
-	position: absolute;
-	width: 100%;
-	height: 4px;
-	background: linear-gradient(90deg, #fff, #fff 50%, transparent 50%, transparent 100%);
-	background-size: 50px;
-	animation: animate_road 0.125s linear infinite;
+
+@media (min-width: 1400px) {
+	.road {
+		position: absolute;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		width: 90vw;
+		transform-style: preserve-3d;
+		transform: rotate(-15deg);
+	}
+	.road::before {
+		content: '';
+		position: absolute;
+		width: 100%;
+		height: 4px;
+		background: linear-gradient(90deg, #fff, #fff 50%, transparent 50%, transparent 100%);
+		background-size: 50px;
+		animation: animate_road 0.125s linear infinite;
+	}
+	.police {
+		position: absolute;
+		width: 200px;
+		height: 80px;
+		background: #3f4c54;
+		border-radius: 10px;
+		box-shadow: -10px 10px rgba(0, 0, 0, 0.05);
+		transform-style: preserve-3d;
+		perspective: 800px;
+		z-index: 10;
+		animation: animate_police_car 5s linear infinite;
+	}
+	.police:nth-child(2) {
+		animation: animate_police_car2 5s linear infinite;
+		animation-delay: -2.5s;
+	}
+	.police::before {
+		content: '';
+		position: absolute;
+		top: 12px;
+		left: 2px;
+		width: 5px;
+		height: 15px;
+		border-radius: 2px;
+		background: #fc3c25;
+		box-shadow: 0 42px #fc3c25;
+	}
+	.police::after {
+		content: '';
+		position: absolute;
+		top: 10px;
+		right: 2px;
+		width: 6px;
+		height: 16px;
+		border-radius: 2px;
+		background: #fff;
+		box-shadow: 0 44px #fff;
+	}
+	.police span {
+		position: absolute;
+		inset: 5px 10px;
+		background: #475b66;
+		border-radius: 10px;
+		overflow: hidden;
+	}
+	.police span::before {
+		content: '911';
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%) rotate(90deg);
+		color: #333;
+		font-size: 1.15em;
+		font-weight: 1000;
+		letter-spacing: 0.1em;
+		z-index: 10;
+	}
+	.police span::after {
+		content: '';
+		position: absolute;
+		top: 50%;
+		left: 60%;
+		transform: translate(-50%, -50%);
+		z-index: 100;
+		width: 6px;
+		height: 10px;
+		background: #29282b;
+		box-shadow: 0 -10px #1f5fff, 0 10px #df1b25;
+	}
+	.police span b {
+		position: absolute;
+		inset: 0px 30px;
+		background: #344650;
+		border-radius: 10px;
+	}
+	.police span b::before {
+		content: '';
+		position: absolute;
+		inset: 6px 25px;
+		background: #ebebeb;
+		border-radius: 5px;
+	}
+	.police span b::after {
+		content: '';
+		position: absolute;
+		inset: 0px 58px;
+		background: #ebebeb;
+	}
+	.police span i {
+		position: absolute;
+		inset: 0;
+	}
+	.police span i::before {
+		content: '';
+		position: absolute;
+		top: 7px;
+		left: 20px;
+		width: 40px;
+		height: 5px;
+		background: #ebebeb;
+		transform-origin: right;
+		transform: rotate(15deg);
+		box-shadow: 100px 34px #ebebeb;
+	}
+	.police span i::after {
+		content: '';
+		position: absolute;
+		bottom: 7px;
+		left: 20px;
+		width: 40px;
+		height: 5px;
+		background: #ebebeb;
+		transform-origin: right;
+		transform: rotate(-15deg);
+		box-shadow: 100px -34px #ebebeb;
+	}
+	.light_beam {
+		position: absolute;
+		top: 5px;
+		right: -2px;
+		width: 10px;
+		height: 70px;
+		background: #0002;
+		border-radius: 15px;
+		transform-style: preserve-3d;
+	}
+	.light_beam::before {
+		content: '';
+		position: absolute;
+		top: 5px;
+		left: 0;
+		width: 150px;
+		height: 16px;
+		background: linear-gradient(90deg, #fff6, transparent);
+		transform-origin: left;
+		transform: perspective(500px) rotatey(-50deg);
+	}
+	.light_beam::after {
+		content: '';
+		position: absolute;
+		bottom: 5.5px;
+		left: 0;
+		width: 150px;
+		height: 16px;
+		background: linear-gradient(90deg, #fff6, transparent);
+		transform-origin: left;
+		transform: perspective(500px) rotatey(-50deg);
+	}
+	.side_mirror {
+		position: absolute;
+		background: white;
+		top: -8px;
+		right: 42px;
+		height: 8px;
+		width: 3px;
+		border-radius: 2px;
+		transform: rotate(-10deg);
+	}
+	.side_mirror::before {
+		content: '';
+		position: absolute;
+		background: white;
+		top: 86px;
+		right: 15px;
+		height: 8px;
+		width: 3px;
+		border-radius: 2px;
+		transform: rotate(20deg);
+	}
+	.police h5 {
+		color: white;
+		transform: rotate(90deg);
+		position: absolute;
+		z-index: 10;
+		top: 32px;
+		left: 5px;
+	}
+	.police h4 {
+		color: white;
+		transform: rotate(90deg);
+		position: absolute;
+		z-index: 10;
+		top: 32px;
+		right: 0px;
+	}
+	.taxi {
+		position: absolute;
+		width: 200px;
+		height: 80px;
+		background: #ffd61deb;
+		border-radius: 10px;
+		box-shadow: -10px 10px rgba(0, 0, 0, 0.05);
+		transform-style: preserve-3d;
+		perspective: 800px;
+		z-index: 10;
+		animation: animate_taxi_car 5s linear infinite;
+		animation-delay: -3s;
+	}
+	.taxi::before {
+		content: '';
+		position: absolute;
+		top: 12px;
+		left: 2px;
+		width: 5px;
+		height: 15px;
+		border-radius: 2px;
+		background: #fc3c25;
+		box-shadow: 0 42px #fc3c25;
+	}
+	.taxi::after {
+		content: '';
+		position: absolute;
+		top: 10px;
+		right: 2px;
+		width: 6px;
+		height: 16px;
+		border-radius: 2px;
+		background: #fff;
+		box-shadow: 0 44px #fff;
+	}
+	.taxi span {
+		position: absolute;
+		inset: 5px 10px;
+		background: #ffee00;
+		border-radius: 10px;
+		overflow: hidden;
+	}
+	.taxi span::before {
+		content: '';
+		position: absolute;
+		top: 12px;
+		right: 80px;
+		height: 45px;
+		width: 20px;
+		border-radius: 5px;
+		background: white;
+		z-index: 10;
+	}
+	.taxi span::after {
+		content: 'TAXI';
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%) rotate(90deg);
+		color: #333;
+		font-size: 1.15em;
+		font-weight: 1000;
+		letter-spacing: 0em;
+		z-index: 10;
+	}
+	.taxi span b {
+		position: absolute;
+		inset: 0px 30px;
+		background: #000000;
+		border-radius: 10px;
+	}
+	.taxi span b::before {
+		content: '';
+		position: absolute;
+		inset: 6px 25px;
+		background: #ffee00;
+		border-radius: 5px;
+	}
+	.taxi span b::after {
+		content: '';
+		position: absolute;
+		inset: 0px 58px;
+		background: #ffee00;
+	}
+	.taxi span i {
+		position: absolute;
+		inset: 0;
+	}
+	.taxi span i::before {
+		content: '';
+		position: absolute;
+		top: 7px;
+		left: 20px;
+		width: 40px;
+		height: 5px;
+		background: #ffee00;
+		transform-origin: right;
+		transform: rotate(15deg);
+		box-shadow: 100px 34px #ffee00;
+	}
+	.taxi span i::after {
+		content: '';
+		position: absolute;
+		bottom: 7px;
+		left: 20px;
+		width: 40px;
+		height: 5px;
+		background: #ffee00;
+		transform-origin: right;
+		transform: rotate(-15deg);
+		box-shadow: 100px -34px #ffee00;
+	}
+	.taxi_light_beam {
+		position: absolute;
+		top: 5px;
+		right: -2px;
+		width: 10px;
+		height: 70px;
+		background: #0002;
+		border-radius: 15px;
+		transform-style: preserve-3d;
+	}
+	.taxi_light_beam::before {
+		content: '';
+		position: absolute;
+		top: 5px;
+		left: 0;
+		width: 150px;
+		height: 16px;
+		background: linear-gradient(90deg, #fff6, transparent);
+		transform-origin: left;
+		transform: perspective(500px) rotatey(-50deg);
+	}
+	.taxi_light_beam::after {
+		content: '';
+		position: absolute;
+		bottom: 5.5px;
+		left: 0;
+		width: 150px;
+		height: 16px;
+		background: linear-gradient(90deg, #fff6, transparent);
+		transform-origin: left;
+		transform: perspective(500px) rotatey(-50deg);
+	}
+	.taxi_side_mirror {
+		position: absolute;
+		background: #ffd61deb;
+		top: -8px;
+		right: 42px;
+		height: 8px;
+		width: 3px;
+		border-radius: 2px;
+		transform: rotate(-10deg);
+	}
+	.taxi_side_mirror::before {
+		content: '';
+		position: absolute;
+		background: #ffd61deb;
+		top: 86px;
+		right: 15px;
+		height: 8px;
+		width: 3px;
+		border-radius: 2px;
+		transform: rotate(20deg);
+	}
 }
+
 @keyframes animate_road {
 	0% {
 		background-position: 50px 0px;
@@ -23,18 +380,6 @@
 	100% {
 		background-position: 0px 0px;
 	}
-}
-.police {
-	position: absolute;
-	width: 200px;
-	height: 80px;
-	background: #3f4c54;
-	border-radius: 10px;
-	box-shadow: -10px 10px rgba(0, 0, 0, 0.05);
-	transform-style: preserve-3d;
-	perspective: 800px;
-	z-index: 10;
-	animation: animate_police_car 5s linear infinite;
 }
 @keyframes animate_police_car {
 	0% {
@@ -56,10 +401,6 @@
 		left: 750px;
 	}
 }
-.police:nth-child(2) {
-	animation: animate_police_car2 5s linear infinite;
-	animation-delay: -2.5s;
-}
 @keyframes animate_police_car2 {
 	0% {
 		bottom: 40px;
@@ -80,188 +421,6 @@
 		left: 420px;
 	}
 }
-.police::before {
-	content: '';
-	position: absolute;
-	top: 12px;
-	left: 2px;
-	width: 5px;
-	height: 15px;
-	border-radius: 2px;
-	background: #fc3c25;
-	box-shadow: 0 42px #fc3c25;
-}
-.police::after {
-	content: '';
-	position: absolute;
-	top: 10px;
-	right: 2px;
-	width: 6px;
-	height: 16px;
-	border-radius: 2px;
-	background: #fff;
-	box-shadow: 0 44px #fff;
-}
-.police span {
-	position: absolute;
-	inset: 5px 10px;
-	background: #475b66;
-	border-radius: 10px;
-	overflow: hidden;
-}
-.police span::before {
-	content: '911';
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%) rotate(90deg);
-	color: #333;
-	font-size: 1.15em;
-	font-weight: 1000;
-	letter-spacing: 0.1em;
-	z-index: 10;
-}
-.police span::after {
-	content: '';
-	position: absolute;
-	top: 50%;
-	left: 60%;
-	transform: translate(-50%, -50%);
-	z-index: 100;
-	width: 6px;
-	height: 10px;
-	background: #29282b;
-	box-shadow: 0 -10px #1f5fff, 0 10px #df1b25;
-}
-.police span b {
-	position: absolute;
-	inset: 0px 30px;
-	background: #344650;
-	border-radius: 10px;
-}
-.police span b::before {
-	content: '';
-	position: absolute;
-	inset: 6px 25px;
-	background: #ebebeb;
-	border-radius: 5px;
-}
-.police span b::after {
-	content: '';
-	position: absolute;
-	inset: 0px 58px;
-	background: #ebebeb;
-}
-.police span i {
-	position: absolute;
-	inset: 0;
-}
-.police span i::before {
-	content: '';
-	position: absolute;
-	top: 7px;
-	left: 20px;
-	width: 40px;
-	height: 5px;
-	background: #ebebeb;
-	transform-origin: right;
-	transform: rotate(15deg);
-	box-shadow: 100px 34px #ebebeb;
-}
-.police span i::after {
-	content: '';
-	position: absolute;
-	bottom: 7px;
-	left: 20px;
-	width: 40px;
-	height: 5px;
-	background: #ebebeb;
-	transform-origin: right;
-	transform: rotate(-15deg);
-	box-shadow: 100px -34px #ebebeb;
-}
-.light_beam {
-	position: absolute;
-	top: 5px;
-	right: -2px;
-	width: 10px;
-	height: 70px;
-	background: #0002;
-	border-radius: 15px;
-	transform-style: preserve-3d;
-}
-.light_beam::before {
-	content: '';
-	position: absolute;
-	top: 5px;
-	left: 0;
-	width: 150px;
-	height: 16px;
-	background: linear-gradient(90deg, #fff6, transparent);
-	transform-origin: left;
-	transform: perspective(500px) rotatey(-50deg);
-}
-.light_beam::after {
-	content: '';
-	position: absolute;
-	bottom: 5.5px;
-	left: 0;
-	width: 150px;
-	height: 16px;
-	background: linear-gradient(90deg, #fff6, transparent);
-	transform-origin: left;
-	transform: perspective(500px) rotatey(-50deg);
-}
-.side_mirror {
-	position: absolute;
-	background: white;
-	top: -8px;
-	right: 42px;
-	height: 8px;
-	width: 3px;
-	border-radius: 2px;
-	transform: rotate(-10deg);
-}
-.side_mirror::before {
-	content: '';
-	position: absolute;
-	background: white;
-	top: 86px;
-	right: 15px;
-	height: 8px;
-	width: 3px;
-	border-radius: 2px;
-	transform: rotate(20deg);
-}
-.police h5 {
-	color: white;
-	transform: rotate(90deg);
-	position: absolute;
-	z-index: 10;
-	top: 32px;
-	left: 5px;
-}
-.police h4 {
-	color: white;
-	transform: rotate(90deg);
-	position: absolute;
-	z-index: 10;
-	top: 32px;
-	right: 0px;
-}
-.taxi {
-	position: absolute;
-	width: 200px;
-	height: 80px;
-	background: #ffd61deb;
-	border-radius: 10px;
-	box-shadow: -10px 10px rgba(0, 0, 0, 0.05);
-	transform-style: preserve-3d;
-	perspective: 800px;
-	z-index: 10;
-	animation: animate_taxi_car 5s linear infinite;
-	animation-delay: -3s;
-}
 @keyframes animate_taxi_car {
 	0% {
 		left: 1000px;
@@ -281,156 +440,4 @@
 		left: 1000px;
 		top: -120px;
 	}
-}
-.taxi::before {
-	content: '';
-	position: absolute;
-	top: 12px;
-	left: 2px;
-	width: 5px;
-	height: 15px;
-	border-radius: 2px;
-	background: #fc3c25;
-	box-shadow: 0 42px #fc3c25;
-}
-.taxi::after {
-	content: '';
-	position: absolute;
-	top: 10px;
-	right: 2px;
-	width: 6px;
-	height: 16px;
-	border-radius: 2px;
-	background: #fff;
-	box-shadow: 0 44px #fff;
-}
-.taxi span {
-	position: absolute;
-	inset: 5px 10px;
-	background: #ffee00;
-	border-radius: 10px;
-	overflow: hidden;
-}
-.taxi span::before {
-	content: '';
-	position: absolute;
-	top: 12px;
-	right: 80px;
-	height: 45px;
-	width: 20px;
-	border-radius: 5px;
-	background: white;
-	z-index: 10;
-}
-.taxi span::after {
-	content: 'TAXI';
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%) rotate(90deg);
-	color: #333;
-	font-size: 1.15em;
-	font-weight: 1000;
-	letter-spacing: 0em;
-	z-index: 10;
-}
-.taxi span b {
-	position: absolute;
-	inset: 0px 30px;
-	background: #000000;
-	border-radius: 10px;
-}
-.taxi span b::before {
-	content: '';
-	position: absolute;
-	inset: 6px 25px;
-	background: #ffee00;
-	border-radius: 5px;
-}
-.taxi span b::after {
-	content: '';
-	position: absolute;
-	inset: 0px 58px;
-	background: #ffee00;
-}
-.taxi span i {
-	position: absolute;
-	inset: 0;
-}
-.taxi span i::before {
-	content: '';
-	position: absolute;
-	top: 7px;
-	left: 20px;
-	width: 40px;
-	height: 5px;
-	background: #ffee00;
-	transform-origin: right;
-	transform: rotate(15deg);
-	box-shadow: 100px 34px #ffee00;
-}
-.taxi span i::after {
-	content: '';
-	position: absolute;
-	bottom: 7px;
-	left: 20px;
-	width: 40px;
-	height: 5px;
-	background: #ffee00;
-	transform-origin: right;
-	transform: rotate(-15deg);
-	box-shadow: 100px -34px #ffee00;
-}
-.taxi_light_beam {
-	position: absolute;
-	top: 5px;
-	right: -2px;
-	width: 10px;
-	height: 70px;
-	background: #0002;
-	border-radius: 15px;
-	transform-style: preserve-3d;
-}
-.taxi_light_beam::before {
-	content: '';
-	position: absolute;
-	top: 5px;
-	left: 0;
-	width: 150px;
-	height: 16px;
-	background: linear-gradient(90deg, #fff6, transparent);
-	transform-origin: left;
-	transform: perspective(500px) rotatey(-50deg);
-}
-.taxi_light_beam::after {
-	content: '';
-	position: absolute;
-	bottom: 5.5px;
-	left: 0;
-	width: 150px;
-	height: 16px;
-	background: linear-gradient(90deg, #fff6, transparent);
-	transform-origin: left;
-	transform: perspective(500px) rotatey(-50deg);
-}
-.taxi_side_mirror {
-	position: absolute;
-	background: #ffd61deb;
-	top: -8px;
-	right: 42px;
-	height: 8px;
-	width: 3px;
-	border-radius: 2px;
-	transform: rotate(-10deg);
-}
-.taxi_side_mirror::before {
-	content: '';
-	position: absolute;
-	background: #ffd61deb;
-	top: 86px;
-	right: 15px;
-	height: 8px;
-	width: 3px;
-	border-radius: 2px;
-	transform: rotate(20deg);
 }
